k8s/backoffice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quickfood-backend-backoffice-service
  namespace: quickfood
  labels:
    app: quickfood-backend-backoffice
spec:
  selector:
    app: quickfood-backend-backoffice
  ports:
    - protocol: TCP
      port: 81
      targetPort: 81
  type: ClusterIP
