k8s/backoffice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quickfood-backend-backoffice-ingress
  namespace: quickfood
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: backoffice.quickfood.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quickfood-backend-backoffice-service
            port:
              number: 81
